--- a/result/2022-07-15.md
+++ b/result/2022-07-15.md
@@ -45,3 +45,4 @@
 45. [TTG再战卡位赛](https://s.weibo.com//weibo?q=%23TTG%E5%86%8D%E6%88%98%E5%8D%A1%E4%BD%8D%E8%B5%9B%23&Refer=top) 21309
 46. [V5战胜iG](https://s.weibo.com//weibo?q=%23V5%E6%88%98%E8%83%9CiG%23&Refer=top) 18534
 47. [夏夜萤火虫氛围感绝了](https://s.weibo.com//weibo?q=%23%E5%A4%8F%E5%A4%9C%E8%90%A4%E7%81%AB%E8%99%AB%E6%B0%9B%E5%9B%B4%E6%84%9F%E7%BB%9D%E4%BA%86%23&Refer=top) 9770
+48. [高温环境下这些症状要警惕](https://s.weibo.com//weibo?q=%23%E9%AB%98%E6%B8%A9%E7%8E%AF%E5%A2%83%E4%B8%8B%E8%BF%99%E4%BA%9B%E7%97%87%E7%8A%B6%E8%A6%81%E8%AD%A6%E6%83%95%23&Refer=top) 9380
