--- a/result/2022-07-16.md
+++ b/result/2022-07-16.md
@@ -43,3 +43,6 @@
 43. [全国最大的奥特曼](https://s.weibo.com//weibo?q=%23%E5%85%A8%E5%9B%BD%E6%9C%80%E5%A4%A7%E7%9A%84%E5%A5%A5%E7%89%B9%E6%9B%BC%23&Refer=top) 32566
 44. [今年三伏天持续至8月24日](https://s.weibo.com//weibo?q=%23%E4%BB%8A%E5%B9%B4%E4%B8%89%E4%BC%8F%E5%A4%A9%E6%8C%81%E7%BB%AD%E8%87%B38%E6%9C%8824%E6%97%A5%23&Refer=top) 11236
 45. [广州天气](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E5%B7%9E%E5%A4%A9%E6%B0%94%23&Refer=top) 10437
+46. [孙颖莎3比0波尔卡诺娃](https://s.weibo.com//weibo?q=%23%E5%AD%99%E9%A2%96%E8%8E%8E3%E6%AF%940%E6%B3%A2%E5%B0%94%E5%8D%A1%E8%AF%BA%E5%A8%83%23&Refer=top) 8373
+47. [甘肃本次疫情病毒为变异株BA.2.38](https://s.weibo.com//weibo?q=%23%E7%94%98%E8%82%83%E6%9C%AC%E6%AC%A1%E7%96%AB%E6%83%85%E7%97%85%E6%AF%92%E4%B8%BA%E5%8F%98%E5%BC%82%E6%A0%AABA.2.38%23&Refer=top) 4829
+48. [太阳将顶薪续约艾顿](https://s.weibo.com//weibo?q=%23%E5%A4%AA%E9%98%B3%E5%B0%86%E9%A1%B6%E8%96%AA%E7%BB%AD%E7%BA%A6%E8%89%BE%E9%A1%BF%23&Refer=top) 4825
